src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_60.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"> 
        <DockPanel.Resources>
                <Style x:Shared="True" TargetType="{x:Type Button}">
                    <Setter Property="Background" Value="Yellow" />
                </Style>
        </DockPanel.Resources>

</DockPanel>
</Page>
